pages/blog/post.module.scss
@import '../../styles/mixin.scss';

article .body {
  width: 40em;
  margin: 0 auto 50px auto;
  max-width: 100%;
  line-height: 1.5;
  font-size: 18px;

  h1 {
    font-size: 1.5em;
  }
  h2 {
    font-size: 1.2em;
  }

  h1,
  h2,
  h3 {
    font-weight: bold;
  }

  * + {
    h1,
    h2,
    h3 {
      margin-top: 0.75em;
    }
  }

  p + p {
    margin-top: var(--spacing-m);
  }

  img {
    margin: 1em;
    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
    border-radius: 8px;
  }

  pre {
    margin: 1.5em;
    white-space: pre;
    overflow-x: auto;
  }

  ol,
  ul {
    margin: var(--spacing-s);
    li {
      margin-left: var(--spacing-l);
    }
  }

  ol li {
    list-style-type: decimal;
  }

  ul li {
    list-style-type: disc;
  }

  blockquote {
    margin: var(--spacing-m);
    padding: var(--spacing-xs) var(--spacing-s);
    border-left: solid 3px lightblue;
  }

  @include mobile {
    font-size: 18px;
  }
}

.header {
  margin: 50px 15px 15px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;

  .header-content {
    width: 80%;
  }

  @include touch {
    margin: 25px 0;
    flex-direction: column;

    .header-content {
      width: 100%;
    }
  }
}

